<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">IndoorMap</string>
    <string name="menu_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="edit_location"></string>
    <string name="del_button">Del Marker</string>
    <string name="done_button">Done</string>
    <string name="create_button">QR Scan</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="Username">Username</string>
    <string name="Password">Password</string>
    <string name="logout_button">Logout</string>
    <string name="createNewMarker">Create</string>
    <string name="confirmPassword">Confirm password</string>
    <string name="eMailText">Email Address</string>

   
  
    
   
   

</resources>